# easy-graphql-server

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  TODO.md  django_makemigrations  django_tests_manage.py  lint  publish  pyproject.toml  pytest.ini  setup.cfg  setup.py  test
.github/workflows/: ci.yml
src/easy_graphql/: __init__.py  casing.py  convert.py  exceptions.py  model_config.py  orm_model_manager.py  schema.py  testing.bak.py  testing.py  types.py
src/easy_graphql/django/: convert.py  model_manager.py
src/easy_graphql/orm/: __init__.py  _fields.py  _lookups.py  _manager.py  django_manager.py  peewee_manager.py  sqlalchemy_manager.py
src/easy_graphql_server/: __init__.py  casing.py  context.py  conversion.py  convert.py  custom_json.py  exceptions.py  exposition.py  graphql_types.py  introspection.py  model_config.py  model_config_custom_field.py  operations.py  schema.py  testing.py  types.py
src/easy_graphql_server/orm/: __init__.py  _fields.py  _lookups.py  _manager.py  django_errors.py  django_manager.py  peewee_manager.py  sqlalchemy_manager.py
src/easy_graphql_server/webserver/: _schema_view.py  django_schema_view.py  flask_schema_view.py
tests/: _base_http_test.py  _data_bakery.py  conftest.py  test_data_django.py  test_data_methods.py  test_data_sqlalchemy.py  test_django.py  test_http.py  test_http_django.py  test_http_django_view.py  test_http_flask.py  test_introspection.py  test_methods.py  test_orm_schema.py  test_person_crud_000.py  test_schema_django.py
tests/conf/: settings.py
tests/django/: base_django_test.py  base_test_case.py  graphql.py  models.py  schema1.py  schema2.py  schema3.py  settings.py  urls.py
tests/django/docs/: 000-person-crud.gql  000-person-crud.json  002-query-optimization.gql  002-query-optimization.json  002-query-optimization.sql  003-delete.gql  004-filter.gql  004-filter.json  005-house.gql  005-house.json  006-occupation.gql  006-occupation.json  007-bank-accounts.gql  007-bank-accounts.json  007-bank-accounts.sql  008-me.json  (+6 more)
tests/flask/: app.py  base_flask_test.py  login.py  test_http_django.py
tests/methods/: schema1.py  schema2.py  schema3.py
tests/sqlalchemy/: base_sqlalchemy_test.py  db.py  models.py  schema.py
tests/testapp/: apps.py  base_django_test.py  models.py  schema1.py  schema2.py  schema3.py  urls.py  views.py
(+41 files in other folders)
