[metadata]
name = easy_graphql_server
version = 0.9.25
author = Mathieu Rodic
author_email = mathieu@rodic.fr
description = Abstraction layer to serve GraphQL
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mathieurodic/easy-graphql-server
project_urls =
    Bug Tracker = https://github.com/mathieurodic/easy-graphql-server/-/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
